Fix site header/title alignment

--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -167,6 +167,8 @@
   }
 
   .title {
+    margin-left: $header-inner-spacer-x;
+
     a {
       align-items: center;
       display: flex;
